tests/baselines/reference/clodulesDerivedClasses.errors.txt
clodulesDerivedClasses.ts(5,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
clodulesDerivedClasses.ts(5,14): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
clodulesDerivedClasses.ts(9,7): error TS2417: Class static side 'typeof Path' incorrectly extends base class static side 'typeof Shape'.
  Types of property 'Utils' are incompatible.
    Property 'convert' is missing in type 'typeof Path.Utils' but required in type 'typeof Shape.Utils'.
clodulesDerivedClasses.ts(14,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
clodulesDerivedClasses.ts(14,13): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== clodulesDerivedClasses.ts (5 errors) ====
    class Shape {
        id: number;
    }
    
    module Shape.Utils {
           ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                 ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export function convert(): Shape { return null;}
    }
    
    class Path extends Shape {
          ~~~~
!!! error TS2417: Class static side 'typeof Path' incorrectly extends base class static side 'typeof Shape'.
!!! error TS2417:   Types of property 'Utils' are incompatible.
!!! error TS2417:     Property 'convert' is missing in type 'typeof Path.Utils' but required in type 'typeof Shape.Utils'.
!!! related TS2728 clodulesDerivedClasses.ts:6:21: 'convert' is declared here.
        name: string;
    
    }
    
    module Path.Utils {
           ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export function convert2(): Path {
            return null;
        }
    }
    
    
    
    